--- a/CondoSimples/CondoSimples/Views/Schedule/Create.cshtml
+++ b/CondoSimples/CondoSimples/Views/Schedule/Create.cshtml
@@ -4,6 +4,9 @@
     ViewBag.Title = "Create";
 }
 
+<script src="~/Scripts/jquery.maskedinput-1.1.4.pack.js"></script>
+<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+
 <h2>Nova reserva</h2>
 
 @using (Html.BeginForm()) 
