--- a/CondoSimples/CondoSimples/Views/Occurrence/IndexPending.cshtml
+++ b/CondoSimples/CondoSimples/Views/Occurrence/IndexPending.cshtml
@@ -46,9 +46,12 @@
                     @Html.DisplayFor(modelItem => item.Solved)
                 </td>
                 <td>
-                    @Html.ActionLink("Editar", "Edit", new { id = item.ID }) |
-                    @Html.ActionLink("Detalhes", "Details", new { id = item.ID }) |
-                    @Html.ActionLink("Excluir", "Delete", new { id = item.ID })
+                    @if (User.IsInRole("Sindico"))
+                    {
+                        @Html.ActionLink("Editar", "Edit", new { id = item.ID }) @Html.Raw(" | ")
+                        @Html.ActionLink("Detalhes", "Details", new { id = item.ID }) @Html.Raw(" | ")
+                        @Html.ActionLink("Excluir", "Delete", new { id = item.ID })
+                    }
                 </td>
             </tr>
         }
