--- a/CondoSimples/CondoSimples/Views/Occurrence/IndexSolved.cshtml
+++ b/CondoSimples/CondoSimples/Views/Occurrence/IndexSolved.cshtml
@@ -46,8 +46,12 @@
                     @Html.DisplayFor(modelItem => item.Solved)
                 </td>
                 <td>
-                    @Html.ActionLink("Detalhes", "Details", new { id = item.ID }) |
-                    @Html.ActionLink("Excluir", "Delete", new { id = item.ID })
+                    @Html.ActionLink("Detalhes", "Details", new { id = item.ID }) 
+                    @if (User.IsInRole("Sindico"))
+                    {
+                        @Html.Raw("| ");
+                        @Html.ActionLink("Excluir", "Delete", new { id = item.ID })
+                    }
                 </td>
             </tr>
         }
