--- a/CondoSimples/CondoSimples/Views/Employee/Details.cshtml
+++ b/CondoSimples/CondoSimples/Views/Employee/Details.cshtml
@@ -23,7 +23,7 @@
         <dt>
             Foto
         </dt>
-        <dd>
+        <dd class="photo-detail">
             <img src="@ViewBag.Image" />
         </dd>
         <dt>
