--- a/CondoSimples/CondoSimples/Content/Site.css
+++ b/CondoSimples/CondoSimples/Content/Site.css
@@ -176,6 +176,29 @@ input.check-box {
     width: 100%;
     margin-bottom: 15px;
 }
+.user-photo img {
+    height: 105px;
+    width: 90px;
+}
+.opcional-div {
+    text-align: right;
+}
+p.opcional {
+    font-size: 10px;
+    color:cadetblue;
+}
+.photo-detail img {
+    height: 105px;
+    width: 90px;
+}
+.footer-links a{
+    color: #ddf4f1;
+    padding: 20px;
+    margin: 2px 50px;
+}
+.footer-links {
+    padding-bottom: 15px;
+}
 
 @media(max-width: 767px) {
     .row {
