--- a/CondoSimples/CondoSimples/Views/OutSourcer/Create.cshtml
+++ b/CondoSimples/CondoSimples/Views/OutSourcer/Create.cshtml
@@ -5,6 +5,9 @@
 }
 
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+<script src="~/Scripts/jquery.maskedinput.js"></script>
+
+
 
 <h2>Novo prestador de serviço</h2>
 
@@ -27,15 +30,23 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Tel, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Tel, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Tel, new { htmlAttributes = new { @class = "form-control", @id = "tel" } })
                 @Html.ValidationMessageFor(model => model.Tel, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="control-label col-md-2" for="telAdd">Telefones adicionais</label>
+            <div class="col-md-10">
+                <input class="form-control text-box single-line" data-val="true" id="telAdd" name="telAdd" type="text" placeholder="3000-000, 3000-001">
+                <span class="field-validation-valid text-danger" data-valmsg-for="telAdd" data-valmsg-replace="true"></span>
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.CNPJ, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.CNPJ, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.CNPJ, new { htmlAttributes = new { @class = "form-control", @id = "cnpj" } })
                 @Html.ValidationMessageFor(model => model.CNPJ, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -69,3 +80,10 @@
 <div>
     @Html.ActionLink("Voltar", "Index")
 </div>
+<script>
+    $('document').ready(function($)
+    {
+        $("#tel").mask("(99) 9999-9999");
+        $("#cnpj").mask(" 99.999.999/9999-99");
+    });
+</script>
