--- a/CondoSimples/CondoSimples/Views/Schedule/Create.cshtml
+++ b/CondoSimples/CondoSimples/Views/Schedule/Create.cshtml
@@ -22,7 +22,7 @@
         <div class="form-group">
             <label class="control-label col-md-2">Área</label>
             <div class="col-md-10">
-                @Html.DropDownList("Places", null, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownList("Places", (IEnumerable<SelectListItem>)ViewBag.Places, new { @class = "form-control" })
             </div>
         </div>
 
