--- a/CondoSimples/CondoSimples/Views/User/Details.cshtml
+++ b/CondoSimples/CondoSimples/Views/User/Details.cshtml
@@ -13,7 +13,7 @@
         <dt>
             Foto
         </dt>
-        <dd>
+        <dd class="photo-detail">
             <img src="@ViewBag.Image" />
         </dd>
         <dt>
