--- a/CondoSimples/CondoSimples/Views/Order/IndexByUser.cshtml
+++ b/CondoSimples/CondoSimples/Views/Order/IndexByUser.cshtml
@@ -14,7 +14,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Description)
             </th>
-            <th></th>
+            <th>
+                @Html.DisplayNameFor(model => model.UserEmployee)
+            </th>
         </tr>
 
         @foreach (var item in Model)
@@ -25,6 +27,9 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UserEmployee.Name)
                 </td>
             </tr>
         }
