--- a/CondoSimples/CondoSimples/Views/User/Index.cshtml
+++ b/CondoSimples/CondoSimples/Views/User/Index.cshtml
@@ -11,10 +11,6 @@
     <input type="submit" value="Pesquisar" class="btn btn-default" />
 </form>
 
-
-<p>
-    @Html.ActionLink("Adicionar usuário", "Create")
-</p>
 <div class="table-responsive">
     <table class="table table-hover table-striped">
         <tr>
@@ -52,7 +48,7 @@
         {
             <tr>
                 <td class="user-photo">
-                    <img src="" alt="" />
+                    <img src=@string.Concat("https://condosimplestg.blob.core.windows.net/fotostg/user_", @item.ID,".jpg") alt="Foto do usuário" />
                 </td>
                 <td class="user-unit">
                     @Html.DisplayFor(modelItem => item.Unit.Name)
@@ -81,7 +77,10 @@
                 <td class="button-group">
                     @Html.ActionLink("Editar", "Edit", new { id = item.ID })
                     @Html.ActionLink("Detalhes", "Details", new { id = item.ID })
-                    @Html.ActionLink("Excluir", "Delete", new { id = item.ID })
+
+                    @if (User.IsInRole("Sindico")) { 
+                        @Html.ActionLink("Excluir", "Delete", new { id = item.ID })
+                    }
                 </td>
             </tr>
         }
