--- a/CondoSimples/CondoSimples/Views/User/Index.cshtml
+++ b/CondoSimples/CondoSimples/Views/User/Index.cshtml
@@ -75,10 +75,10 @@
                     @Html.DisplayFor(modelItem => item.Visitors)
                 </td>
                 <td class="button-group">
-                    @Html.ActionLink("Editar", "Edit", new { id = item.ID })
-                    @Html.ActionLink("Detalhes", "Details", new { id = item.ID })
-
-                    @if (User.IsInRole("Sindico")) { 
+                    @if (User.IsInRole("Sindico"))
+                    {   
+                        @Html.ActionLink("Editar", "Edit", new { id = item.ID })
+                        @Html.ActionLink("Detalhes", "Details", new { id = item.ID })
                         @Html.ActionLink("Excluir", "Delete", new { id = item.ID })
                     }
                 </td>
