--- a/CondoSimples/CondoSimples/Views/Board/IndexAdmin.cshtml
+++ b/CondoSimples/CondoSimples/Views/Board/IndexAdmin.cshtml
@@ -54,8 +54,8 @@
                     @Html.DisplayFor(modelItem => item.Published)
                 </td>
                 <td>
-                    @Html.ActionLink("Publicar", "Publish", new { id = item.Id }) |
-                    @Html.ActionLink("Detalhes", "Details", new { id = item.Id }) |
+                    @Html.ActionLink("Publicar", "Publish", new { id = item.Id })<br>
+                    @Html.ActionLink("Detalhes", "Details", new { id = item.Id })<br>
                     @Html.ActionLink("Excluir", "Delete", new { id = item.Id })
                 </td>
             </tr>
