--- a/CondoSimples/CondoSimples/Views/Notification/Create.cshtml
+++ b/CondoSimples/CondoSimples/Views/Notification/Create.cshtml
@@ -17,7 +17,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Message, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Message, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Message, new { htmlAttributes = new { @class = "form-control box-area" } })
                 @Html.ValidationMessageFor(model => model.Message, "", new { @class = "text-danger" })
             </div>
         </div>
