--- a/CondoSimples/CondoSimples/Views/Shared/_Layout.cshtml
+++ b/CondoSimples/CondoSimples/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <div class="navbar navbar-inverse">
+    <div class="navbar navbar-inverse hidden-print">
         <div class="container">
             <div class="navbar-header full-width">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -75,12 +75,12 @@
         @RenderBody()
                
     </div>
-    <footer class="standard-footer">
-        <div class="container">
+    <footer class="standard-footer hidden-print">
+        <div class="container hidden-print">
             <p>&copy; @DateTime.Now.Year - CondoSimples</p><br />
-            <div class="footer-links col-xs-12 text-center">
-                @Html.ActionLink("Contate-nos", "Contact", "Home")
-                <a href="~/Terms/Index">Termos de uso</a> <a href="~/Privacy/Index">Política de privacidade</a>
+            <div class="footer-links col-xs-12 text-center hidden-print">
+                @Html.ActionLink("Contate-nos", "Contact", "Home", new { @class = "hidden-print" })
+                <a href="~/Terms/Index" class="hidden-print">Termos de uso</a> <a href="~/Privacy/Index" class="hidden-print">Política de privacidade</a>
             </div>
         </div>
     </footer>
